<resources>
    <string name="app_name">Userly</string>
    <string name="logo_name">Userly</string>
    <string name="welcome_text">Hello there, Welcome Back</string>
    <string name="sign_in_text">Sign In to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_text"><u>NEW USER? SIGN UP</u></string>
    <string name="welcome">welcome</string>
    <string name="sign_up_text">SignUp to start your new Journey</string>
    <string name="full_name">Full Name</string>
    <string name="contact">Contact</string>
    <string name="btn_login">Login</string>
    <string name="btn_sing_up">Sign Up</string>
    <string name="btn_update">Update</string>
    <string name="login_text"><u>ALREADY HAVE AN ACCOUNT? LOGIN</u></string>
    <string name="error_empty_field">Field can not be empty</string>
    <string name="error_email">Please enter a valid email address</string>
    <string name="error_password">Password must be greater than or equal to 6 characters</string>
    <string name="error_contact_length">Contact number is invalid</string>
    <string name="error_login">Please enter correct email and password</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="feedback">Feedback</string>

    <string name="navigagtion_drawer_open">Open navigation drawer</string>
    <string name="navigagtion_drawer_close">Close navigation drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="logout_message">Do you want to Logout?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="feedbackText">We would love to hear from you. If you are facing any issues in using the app, please let us know. Your valuable feedback will help us serve you better.</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="theme_pref_key">theme_pref</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_denied_message">Permission is denied, Please allow permissions from App Settings.</string>
    <string name="users">Users</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="user_details">User Details</string>
    <string name="details">Details</string>
    <string name="quotes">Quotes</string>


    <string-array name="spinner_items">
        <item><b>Select Theme</b></item>
        <item>Follow System</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author">Author</string>
    <string name="add">Add</string>
    <string name="add_quotes">Add Quote</string>
    <string name="ratings">Ratings</string>
    <string name="comment">Comment</string>
</resources>
