<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/txtAddQuotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_quotes"
        android:gravity="center"
        android:textSize="18sp"
        android:fontFamily="@font/antic"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtQuotesMessage"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/message">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxtQuotesMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtQuotesAuthor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/author">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxtQuotesAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddQuotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginStart="5dp"
            android:text="@string/add" />
    </LinearLayout>

</LinearLayout>