<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="70dp"
    app:layout_behavior="@string/bottom_sheet_behavior">


    <TextView
        android:id="@+id/txtProfilePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/profile_photo"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/rLytGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabProfileGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_gallery"
                app:backgroundTint="@color/colorPrimary" />

            <TextView
                android:id="@+id/txtGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/antic"
                android:text="@string/gallery"
                android:textSize="18sp"
                android:textColor="?android:attr/textColorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rLytCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabProfileCamera"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_photo_camera"
                app:backgroundTint="@color/colorPrimary" />

            <TextView
                android:id="@+id/txtCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/antic"
                android:text="@string/camera"
                android:textSize="18sp"
                android:textColor="?android:attr/textColorPrimary"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>